# tcp-socket-control-system

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.en.md  README.md
.github/workflows/: ci.yml
client/python/: README.md  tcp_client.py
client/python_gui/: README.md  requirements.txt  status_parser.py  tcp_gui_client.py
docs/en/: README.md  development_log.md  implementation_notes.md  protocol_spec.md  sequence.md  state_transition.md  system_overview.md
docs/ja/: development_log.md  implementation_notes.md  protocol_spec.md  sequence.md  state_transition.md  system_overview.md
ebpf/: Makefile  README.ja.md  README.md  tcp_monitor.bpf.c  tcp_monitor.c  tcp_monitor.h
include/: app_state.h  server.h
server/: CMakeLists.txt  README.md
server/include/: protocol.h
server/scripts/: setup_ubuntu.sh
server/src/: main.c  protocol.c  server.c
server/tests/: README.md
src/: app_state.c
tests/python/: test_status_parser.py
